--- a/setup/action.yml
+++ b/setup/action.yml
@@ -46,7 +46,7 @@ runs:
         script: |
           const path = require('path');
           const wd = '${{ inputs.working-directory }}';
-          const pkgPath = wd ? path.join(wd, './package.json') : './package.json';
+          const pkgPath = (wd != null && wd != '.') ? path.join(wd, './package.json') : './package.json';
           let { packageManager } = require(pkgPath);
           if (!packageManager && wd) {
             // try the packageManager from root package json
